Fixes jumpy selected tiles in paint palette.

--- a/src/css/Tile.css
+++ b/src/css/Tile.css
@@ -46,6 +46,6 @@
 }
 
 .Paint_palette .Tile.Selected {
-    width: 46px;
-    height: 46px;
+    width: 48px;
+    height: 48px;
 }
